--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="utf-8" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>Frends</title>
   </head>
   <body>
@@ -11,18 +14,75 @@
         <div class="header_colum">
           <i class="fa fa-fighter-jet" aria-hidden="true"></i>
           <i class="fa fa-wifi" aria-hidden="true"></i>
-      </div>
-      <div class="header_colum">
-        <span class="header_time">18:38</span>
         </div>
+        <div class="header_colum"><span class="header_time">18:38</span></div>
         <div class="header_colum">
           <i class="fa fa-moon-o" aria-hidden="true"></i>
           <i class="fa fa-bluetooth-b" aria-hidden="true"></i>
-          <span class="header_battery">66% <i class="fa fa-battery-full" aria-hidden="true"></i>
-            </div>
+          <span class="header_battery"
+            >66% <i class="fa fa-battery-full" aria-hidden="true"></i>
+          </span>
+        </div>
       </div>
       <div class="header_bottom"></div>
+      <div class="header_colum"><span class="header_text">Manage</span></div>
+      <div class="header_colum">
+        <span class="header_text"
+          >Friends <span class="header_number">1</span></span>
+      </div>
+      <div class="header_colum"><i class="fa fa-cog fa-lg"></i></div>
     </header>
-
+    <main class="Friends">
+      <div class="search-bar">
+        <i class="fa fa-search"></i>
+        <input type="text" placeholder="Find friends, chats, Plus Friends">
+      </div>
+      <section class="friends_section">
+        <header class="friends_section-header">
+          <h6 class="friends_section_title">My Profile</h6>
+        </header>
+        <div class="friends_section_rows">
+          <div class="friends_section_row">
+            <img src="" alt="">
+            <span class="friends_section-name">Nicolas</span>
+          </div>
+          <div class="friends_section_rows">
+            <div class="friends_section_row">
+              <img src="" alt="">
+              <span class="friends_section-title">Friends'Names Display</span>
+            </div>
+          </div>
+        </section>
+      <section class="friends_section">
+        <header class="friends_section-header">
+          <h6 class="friends_section-title"></h6>
+        </header>
+        <div class="friends_section-rows">
+          <div class="friends_section-row">
+            <div class="friends_section_column">
+              <img src="" alt="">
+              <span class="friends_section-name">Nicolas</span>
+          </div>
+          <span class="friends_section_tagline">
+            Life is short. So live your life.
+          </span>
+        </div>
+      </div>
+      </section>
+</main>
+    <nav class="tab-bar">
+      <a href="index.html" class="tab-bar_tab tab-bar_tab--selected">
+        <i class="fa fa-user"></i><span class="tab-bar_title">Friends</span>
+      </a>
+      <a href="chats.html" class="tab-bar">
+        <i class="fa fa-comment"></i><span class="tab-bar_title">Chats</span>
+      </a>
+      <a href="find.html" class="tab-bar">
+        <i class="fa fa-search"></i><span class="tab-bar_title">Find</span>
+      </a>
+      <a href="more.html" class="tab-bar">
+        <i class="fa fa-ellipsis-h"></i><span class="tab-bar_title">More</span>
+      </a>
+    </nav>
   </body>
 </html>
