--- a/find.html
+++ b/find.html
@@ -29,6 +29,36 @@
         <div class="header_colum"></div>
       </div>
     </header>
+    <main class="find">
+      <section class="find_options">
+        <div class="find_option">
+          <i class="fa fa-address-book fa-lg"></i>
+          <span class="find_option-title">Find</span>
+        </div>
+        <div class="find_option">
+          <i class="fa fa-qrcode"></i>
+          <span class="find_option-title">QR code</span>
+        </div>
+        <div class="find_option">
+          <i class="fa fa-mobile fa-lg"></i>
+          <span class="find_option-title">Shake</span>
+        </div>
+        <div class="find_option">
+          <i class="fa fa-envelope-o fa-lg"></i>
+          <span class="find_option-title">invite via SMS</span>
+        </div>
+      </section>
+      <section class="find-recommended">
+        <header>
+          <h6 class="recommended_title">recommended firends</h6>
+        </header>
+        <div class="recommended-none">
+          <span class="recommended text">You have no recommended friends</span>
+        </div>
+
+      </sction>
+    </main>
+
     <nav class="tab-bar">
       <a href="index.html" class="tab-bar_tab">
         <i class="fa fa-user"></i><span class="tab-bar_title">Friends</span>
