--- a/more.html
+++ b/more.html
@@ -29,6 +29,82 @@
         <div class="header_colum"></div>
       </div>
     </header>
+    <main class="more">
+      <header class="more_header">
+        <div class="more-header_colum">
+          <i class="fa fa-comment fa-2x"></i>
+      </header>
+      <section class="more_option">
+        <div class="more_option">
+          <i class="fa fa-smile-o fa-2x"></i>
+          <span class="more_option-title">Emoticons</span>
+        <div class="more_option">
+          <i class="fa fa-paint-brush fa-2x"></i>
+          <span class="more_option-title">Themes</span>
+        <div class="more_option">
+          <i class="fa fa-hand-peace-o fa-2x"></i>
+          <span class="more_option-title">Plus friend</span>
+        <div class="more_option">
+            <i class="fa fa-user-circle-o fa-2x"></i>
+            <span class="more_option-title">Account</span>
+          </div>
+      </section>
+      <section class="more_plus-friends">
+        <header class="plus-firends-header">
+          <h2 class="plus-friends_title">Plus Friends</h2>
+          <span class="plus-friends_learn-more">
+            <i class="fa fa-info-circle"></i>
+            Learn More
+          </span>
+        </header>
+        <div class="plus-friends-items">
+          <i class="fa fa-cutlery"></i>
+          <span class="plus-friends_item-title">Order</span>
+        </div>
+        <div class="plus-friends-items">
+          <i class="fa fa-home"></i>
+          <span class="plus-friends_item-title">Store</span>
+        </div>
+        <div class="plus-friends-items">
+           <i class="fa fa-television"></i>
+           <span class="plus-friends_item-title">TV Channel/Radio</span>
+        </div>
+        <div class="plus-friends-items">
+          <i class="fa fa-pencil"></i>
+          <span class="plus-friends_item-title">Creation</span>
+        </div>
+        <div class="plus-friends-items">
+          <i class="fa fa-graduation-cap"></i>
+          <span class="plus-friends_item-title">Education</span>
+        </div>
+        <div class="plus-friends-items">
+          <i class="fa fa-university"></i>
+          <span class="plus-friends_item-title">Politics</span>
+        </div>
+        <div class="plus-friends-items">
+          <i class="fa fa-krw"></i>
+          <span class="plus-friends_item-title">Finance</span>
+        </div>
+        <div class="plus-friends-items">
+          <i class="fa fa-video-camera"></i>
+          <span class="plus-friends_item-title">Movies/Music</span>
+        </div>
+      </section>
+      <section class="more_options">
+        <div class="more_option">
+          <img src="images/kakaostory.jpg" alt"" class="more_options-image">
+          <span class="more_option-title">Kakao Story</span>
+        </div>
+        <div class="more_option">
+          <img src="images/path.png" alt"" class="more_options-image">
+          <span class="more_option-title">Path</span>
+        </div>
+        <div class="more_option">
+          <img src="images/kakaofriends.jpeg" alt"" class="more_options-image">
+          <span class="more_option-title">kakao friends</span>
+        </div>
+      </section>
+    </main>
     <nav class="tab-bar">
       <a href="index.html" class="tab-bar_tab">
         <i class="fa fa-user"></i><span class="tab-bar_title">Friends</span>
