--- a/chat.html
+++ b/chat.html
@@ -32,5 +32,31 @@
         <i class="fa fa-search"></i> <i class="fa fa-bars"></i>
       </div>
     </header>
+    <main class="chat">
+      <div class="date-divider">
+        <span class="date-divider-text">Wednesday, August 2, 2017</span>
+      </div>
+      <div class="chat_message chat_message--frome-me">
+        <span class="chat_message_time">17:55</span>
+        <span class="chat_message_body"> Hello! This is a test message </span>
+      </div>
+      <div class="chat_message chat_message--to-me">
+        <img
+          src="images/kakaofriends.jpeg"
+          alt=""
+          class="chat_message-avatar"
+        />
+        <div class="chat_message-center">
+          <h3 class="chat_message-username">LYNN</h3>
+        </div>
+        <span class="chat_message_time">And this is an answer</span>
+        <span class="chat_message_body">19:30</span>
+      </div>
+    </main>
+    <div class="type-message"><i class="fa fa-plus fa-2x"></i></div>
+    <div class="type-message-input">
+      <input type="text" /> <i class="fa fa-smile-o"></i>
+      <span class="record-message"></span> <i class="fa fa-microphone"></i>
+    </div>
   </body>
 </html>
