--- a/chats.html
+++ b/chats.html
@@ -40,6 +40,7 @@
       </div>
       <ul class="chats_list">
         <li class="chats_chat">
+          <a href="chat.html">
           <div class="chat_content">
             <img src="images/mac.jpg">
             <div class="chat_privew">
@@ -49,10 +50,12 @@
           <span class="chat_date-time">
             15:55
           </span>
+        </a>
         </li>
       </ul>
       <ul class="chats_list">
         <li class="chats_chat">
+          <a href="chat.html">
           <div class="chat_content">
             <img src="images/lamp_off.png">
             <div class="chat_privew">
@@ -62,6 +65,7 @@
           <span class="chat_date-time">
             Jul 29
           </span>
+        </a>
       </ul>
       <div class="chat_btn">
         <i class="fa fa-comment"></i>
