chat + Back to push

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
         </header>
         <div class="friends_section_rows">
           <div class="friends_section_row">
-            <img src="" alt="">
+            <img src="images/kakaofriends.jpeg" alt="">
             <span class="friends_section-name">Nicolas</span>
           </div>
           <div class="friends_section_rows">
             <div class="friends_section_row">
-              <img src="" alt="">
+              <img src="images/kakaofriends.jpeg" alt="">
               <span class="friends_section-title">Friends'Names Display</span>
             </div>
           </div>
@@ -59,9 +59,11 @@
         </header>
         <div class="friends_section-rows">
           <div class="friends_section-row">
+            <a href="profile.html">
             <div class="friends_section_column">
-              <img src="" alt="">
+              <img src="images/kakaofriends.jpeg" alt="">
               <span class="friends_section-name">Nicolas</span>
+            </a>
           </div>
           <span class="friends_section_tagline">
             Life is short. So live your life.
