--- a/profile.html
+++ b/profile.html
@@ -19,16 +19,29 @@
         <div class="header_colum">
           <i class="fa fa-moon-o" aria-hidden="true"></i>
           <i class="fa fa-bluetooth-b" aria-hidden="true"></i>
-          <span class="header_battery"
-            >66% <i class="fa fa-battery-full" aria-hidden="true"></i
-          ></span>
+          <span class="header_battery">66%</span>
+          <i class="fa fa-battery-full" aria-hidden="true"> </i>
         </div>
         <div class="header_bottom"></div>
-        <div class=header_colum"> <i class="fa fa-user fa-lg"></i>
+        <div class=header_colum">
+        <a href="index.html"> <i class="fa fa-user fa-lg"></i> </a>
       </div>
       <div class="header_colum">
         <i class="fa fa-search"></i> <i class="fa fa-bars"></i>
       </div>
     </header>
+    <main class="Profile">
+      <header class="profile_header">
+        <img src="images/kakaofriends.jpeg" alt="" />
+        <h3 class="profile_header-title">Nicolas</h3>
+        <input type="text" placeholder="intico.ne@gmail.com" />
+        <div class="profile_actions">
+          <span class="profile_action-circle">My chat rooms</span>
+          <i class="fa fa-comment fa-2x"></i>
+          <span class="profile_action-title">Edit Profile</span>
+          <i class="fa fa-pencil fa-2x"></i>
+        </div>
+      </header>
+    </main>
   </body>
 </html>
