--- a/more.html
+++ b/more.html
@@ -7,9 +7,10 @@
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <title>More</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
+    <header class="top-header">
       <div class="header_top">
         <div class="header_colum">
           <i class="fa fa-fighter-jet" aria-hidden="true"></i>
